--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@microsoft/sp-core-library": "1.7.1",
     "@microsoft/sp-lodash-subset": "1.7.1",
-    "@microsoft/sp-office-ui-fabric-core": "1.7.1",
+    "@microsoft/sp-office-ui-fabric-core": "^1.7.1",
     "@microsoft/sp-webpart-base": "1.7.1",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.4.2",
@@ -22,7 +22,8 @@
     "@types/webpack-env": "1.13.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-redux": "^6.0.0"
+    "react-redux": "^6.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "resolutions": {
     "@types/react": "16.4.2"
