--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.7.1",
-    "@microsoft/sp-tslint-rules": "1.7.1",
     "@microsoft/sp-module-interfaces": "1.7.1",
+    "@microsoft/sp-tslint-rules": "1.7.1",
     "@microsoft/sp-webpart-workbench": "1.7.1",
-    "gulp": "~3.9.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2"
+    "ajv": "~5.2.2",
+    "gulp": "~3.9.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
