--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
+    "axios": "^0.18.0",
     "gulp": "~3.9.1",
     "redux-devtools-extension": "^2.13.8"
   }
